tooling/nargo_cli/tests/snapshots/execution_success/signed_cmp/execute__tests__force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "minus_one",
        "type": {
          "kind": "integer",
          "sign": "signed",
          "width": 8
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "2920182694213909827": {
        "error_kind": "string",
        "string": "attempt to subtract with overflow"
      },
      "7233212735005103307": {
        "error_kind": "string",
        "string": "attempt to multiply with overflow"
      }
    }
  },
  "bytecode": [
    "func 0",
    "current witness index : _30",
    "private parameters indices : [_0]",
    "public parameters indices : []",
    "return value indices : []",
    "BLACKBOX::RANGE [(_0, 8)] []",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) 0 ], EXPR [ 128 ]], outputs: [_1, _2]",
    "BLACKBOX::RANGE [(_1, 1)] []",
    "BLACKBOX::RANGE [(_2, 7)] []",
    "EXPR [ (1, _0) (-128, _1) (-1, _2) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) 512 ], EXPR [ 512 ]], outputs: [_3, _4]",
    "BLACKBOX::RANGE [(_3, 1)] []",
    "BLACKBOX::RANGE [(_4, 9)] []",
    "EXPR [ (1, _0) (-512, _3) (-1, _4) 512 ]",
    "EXPR [ (2, _1, _3) (-1, _1) (-1, _3) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (-1, _0) 256 ], EXPR [ 256 ]], outputs: [_5, _6]",
    "BLACKBOX::RANGE [(_6, 8)] []",
    "EXPR [ (-1, _0) (-256, _5) (-1, _6) 256 ]",
    "EXPR [ (-1, _5) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (127, _0) 0 ], EXPR [ 256 ]], outputs: [_7, _8]",
    "BLACKBOX::RANGE [(_7, 8)] []",
    "BLACKBOX::RANGE [(_8, 8)] []",
    "EXPR [ (127, _0) (-256, _7) (-1, _8) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) 128 ], EXPR [ 256 ]], outputs: [_9, _10]",
    "BLACKBOX::RANGE [(_9, 1)] []",
    "BLACKBOX::RANGE [(_10, 8)] []",
    "EXPR [ (1, _0) (-256, _9) (-1, _10) 128 ]",
    "EXPR [ (-254, _0, _9) (127, _0) (32512, _9) (-1, _11) 0 ]",
    "BLACKBOX::RANGE [(_11, 8)] []",
    "BRILLIG CALL func 0: inputs: [EXPR [ (-1, _9) (1, _11) 128 ], EXPR [ 256 ]], outputs: [_12, _13]",
    "BLACKBOX::RANGE [(_13, 8)] []",
    "EXPR [ (-1, _9) (1, _11) (-256, _12) (-1, _13) 128 ]",
    "EXPR [ (-1, _12) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _8) 511 ], EXPR [ 256 ]], outputs: [_14, _15]",
    "BLACKBOX::RANGE [(_14, 2)] []",
    "BLACKBOX::RANGE [(_15, 8)] []",
    "EXPR [ (1, _8) (-256, _14) (-1, _15) 511 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _8) 128 ], EXPR [ 256 ]], outputs: [_16, _17]",
    "BLACKBOX::RANGE [(_16, 1)] []",
    "BLACKBOX::RANGE [(_17, 8)] []",
    "EXPR [ (1, _8) (-256, _16) (-1, _17) 128 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _15) 128 ], EXPR [ 256 ]], outputs: [_18, _19]",
    "BLACKBOX::RANGE [(_18, 1)] []",
    "BLACKBOX::RANGE [(_19, 8)] []",
    "EXPR [ (1, _15) (-256, _18) (-1, _19) 128 ]",
    "EXPR [ (1, _16) (-1, _18) (-1, _20) 0 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _20) 0 ]], outputs: [_21]",
    "EXPR [ (1, _20, _21) (1, _22) -1 ]",
    "EXPR [ (1, _20, _22) 0 ]",
    "EXPR [ (1, _16, _22) (-1, _16) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _15) 0 ], EXPR [ 128 ]], outputs: [_23, _24]",
    "BLACKBOX::RANGE [(_23, 1)] []",
    "BLACKBOX::RANGE [(_24, 7)] []",
    "EXPR [ (1, _15) (-128, _23) (-1, _24) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _15) 512 ], EXPR [ 512 ]], outputs: [_25, _26]",
    "BLACKBOX::RANGE [(_25, 1)] []",
    "BLACKBOX::RANGE [(_26, 9)] []",
    "EXPR [ (1, _15) (-512, _25) (-1, _26) 512 ]",
    "EXPR [ (2, _23, _25) (-1, _23) (-1, _25) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _15) 0 ], EXPR [ 128 ]], outputs: [_27, _28]",
    "BLACKBOX::RANGE [(_27, 1)] []",
    "BLACKBOX::RANGE [(_28, 7)] []",
    "EXPR [ (1, _15) (-128, _27) (-1, _28) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _15) 385 ], EXPR [ 512 ]], outputs: [_29, _30]",
    "BLACKBOX::RANGE [(_29, 1)] []",
    "BLACKBOX::RANGE [(_30, 9)] []",
    "EXPR [ (1, _15) (-512, _29) (-1, _30) 385 ]",
    "EXPR [ (2, _27, _29) (-1, _27) (-1, _29) 0 ]",
    "unconstrained func 0",
    "[Const { destination: Direct(10), bit_size: Integer(U32), value: 2 }, Const { destination: Direct(11), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(10), offset_address: Direct(11) }, BinaryFieldOp { destination: Direct(2), op: IntegerDiv, lhs: Direct(0), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Mul, lhs: Direct(2), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Sub, lhs: Direct(0), rhs: Direct(1) }, Mov { destination: Direct(0), source: Direct(2) }, Stop { return_data: HeapVector { pointer: Direct(11), size: Direct(10) } }]",
    "unconstrained func 1",
    "[Const { destination: Direct(21), bit_size: Integer(U32), value: 1 }, Const { destination: Direct(20), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(21), offset_address: Direct(20) }, Const { destination: Direct(2), bit_size: Field, value: 0 }, BinaryFieldOp { destination: Direct(3), op: Equals, lhs: Direct(0), rhs: Direct(2) }, JumpIf { condition: Direct(3), location: 8 }, Const { destination: Direct(1), bit_size: Field, value: 1 }, BinaryFieldOp { destination: Direct(0), op: Div, lhs: Direct(1), rhs: Direct(0) }, Stop { return_data: HeapVector { pointer: Direct(20), size: Direct(21) } }]"
  ],
  "debug_symbols": "[debug_symbols]",
  "file_map": "[file_map]",
  "names": [
    "main"
  ],
  "brillig_names": [
    "directive_integer_quotient",
    "directive_invert"
  ]
}
